# DrinkingBuddyServer

./: .env.example  .gitignore  Containerfile  LICENSE  README.md  adapter.wsgi  checks.sh  drinkingBuddy.db  drinkingBuddy.db.old  drinkingBuddyDB.py  drinkingBuddyDB_declarative.py  drinkingBuddyDB_declarative_old.py  drinkingbuddy.py  items-check  migration.py  pyproject.toml  requirements.txt  server_flask.py  testSql.py  transactions-check
.github/workflows/: build.yaml
src/DrinkingBuddyServer/: __main__.py
src/DrinkingBuddyServer/admin/: __init__.py  blueprint.py  categories.py  dashboard.py  items.py  stats.py  transactions.py  users.py
src/DrinkingBuddyServer/templates/admin/: base.html  category_form.html  dashboard.html  item_form.html  item_rows.html  items.html  login.html  stats.html  user_cards.html  user_form.html  user_rows.html  users.html
src/ptl_buddy_server/: app.py  ddl.py  models.py  prod.py
src/ptl_buddy_server/admin/: auth.py  blueprint.py  categories.py  dashboard.py  items.py  stats.py  transactions.py  users.py
src/ptl_buddy_server/templates/admin/: categories.html  category_row.html  item_row.html  items.html  stats_rows.html  transaction_rows.html  transactions.html  user_cards.html  user_row.html
