[project]
name = "DrinkingBuddyServer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask_cors",
    "flask_marshmallow",
    "flask_restful",
    "flask_sqlalchemy",
    "marshmallow",
    "marshmallow-sqlalchemy",
    "siphash",
    "sqlalchemy",
    "ldap3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
DrinkingBuddyServer = ["templates/**/*"]
